apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion 31
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.tyron.code"
        minSdkVersion 26
        targetSdkVersion 31
        versionCode 1
        versionName "1.0"
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
}

configurations.implementation {
    exclude group: "org.jetbrains", module: "annotations"
}

dependencies {
    implementation project(path: ':build-logic')
    implementation project(path: ':common')
    implementation project(path: ':completion')
    implementation project(path: ':lint')
    implementation project(path: ':LayoutPreview')
    implementation project(path: ':kotlin-completion')
    implementation project(path: ':code-editor')
    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")

    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.core:core:1.6.0'

    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'androidx.viewpager:viewpager:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.3.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.1'
    implementation 'androidx.fragment:fragment:1.3.6'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
    implementation 'androidx.activity:activity:1.3.1'
    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'

    implementation 'org.antlr:antlr4-runtime:4.9.2'
    implementation files (
        'libs/google-java-format-1.7.jar',
        'libs/language-base-0.5.0.jar',
        'libs/language-java-0.5.0.jar'
    )

    implementation 'androidx.preference:preference:1.1.1'
    implementation 'com.github.TutorialsAndroid:crashx:v6.0.19'
}
